--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "build": "nuxt build --dotenv .env.local",
+    "build:local": "nuxt build --dotenv .env.local",
     "build:vercel": "NITRO_PRESET=vercel nuxt build",
+    "build:firebase": "NITRO_PRESET=firebase nuxt build --dotenv .env.firebase",
     "dev": "nuxt dev --dotenv .env.local",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview --dotenv .env.local",
+    "preview": "nuxt preview",
+    "deploy:firebase": "firebase deploy",
     "postinstall": "nuxt prepare"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
     "firebase-tools": "^11.24.1",
     "nuxt": "^3.2.3",
     "nuxt-vuefire": "^0.1.6",
