--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-node_modules
-*.log*
-.nuxt
-.nitro
 .cache
+.DS_Store
+.env
+.env*
+!.env.*.example
+.firebase
+.firebaserc
+.nitro
+.nuxt
 .output
 .vercel
-.env
+*.log*
 dist
-.DS_Store
+node_modules
