Test another vercel.config

--- a/vercel.config
+++ b/vercel.config
@@ -1,8 +1,12 @@
 {
   "rewrites": [
     {
-        "source": "/__/auth(.*)",
-        "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth$1"
+        "source": "/__/auth/:path*",
+        "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth/:path*"
+    },
+    {
+        "source": "/__/auth/:path*/",
+        "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth/:path*/"
     }
   ]
 }
