this should work

--- a/vercel.config
+++ b/vercel.config
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-        "source": "/__/auth/(.*)",
-        "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth/$1"
+      "source": "/__/auth/:match*",
+      "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth/:match*"
     }
   ]
 }
