--- a/vercel.config
+++ b/vercel.config
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/__/auth/:match*",
+      "source": "/__/auth/:match(.*)",
       "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth/:match*"
     }
   ]
