--- a/vercel.config
+++ b/vercel.config
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/__/auth/:match(.*)",
-      "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth/:match*"
+      "source": "/__/auth(.*)",
+      "destination": "https://chris-spiegl-testing.firebaseapp.com/__/auth$1"
     }
   ]
 }
