--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    // "paths": {
+    //   "os": ["./os.cjs"]
+    // }
   }
 }
